@@ -380,6 +380,7 @@ OP_MercenaryDataResponse=0x5c06
 OP_MercenaryHire=0x18f9
 OP_MercenaryDismiss=0x9d9a
 OP_MercenaryTimerRequest=0x39a1
+OP_MercenaryTimer=0x6f9e
 OP_MercenaryUnknown1=0x6e0e
 OP_MercenaryCommand=0x564f
 OP_MercenarySuspendRequest=0x1d98
