@@ -550,6 +550,7 @@ OP_MercenaryDataUpdate=0x0786		#
 OP_MercenaryCommand=0x27bf			#
 OP_MercenarySuspendRequest=0x05f1	#
 OP_MercenarySuspendResponse=0x57f2	#
+OP_MercenaryUnsuspendResponse=0x3015
 OP_MercenaryDataUpdateRequest=0x390c	#
 OP_MercenaryDismiss=0x0bd0			#
 OP_MercenaryTimerRequest=0x0924		#
